<resources>
    <string name="app_name">Homeless Eradicator</string>
    <string name="welcome">WELCOME BACK</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="signin">Sign In</string>
    <string name="newUser">Sign Up</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="donate">DONATE</string>
    <string name="details">Enter the Details</string>
    <string name="register">Register</string>
    <string name="forum">FORUM</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phno">Phone number</string>
    <string name="dob">Date of birth</string>
    <string name="register_as_a">Register as a</string>
    <string name="volunteer">Volunteer</string>
    <string name="organisation_incharge">Organisation Incharge</string>
    <string name="user">User</string>
    <string name="confirm_password">Confirm password</string>
    <string name="top_donors">Top Donors</string>
    <string name="best_ideas">Best Ideas</string>
    <string name="ongoing_projects">Ongoing Projects</string>
    <string name="happy_faces">Happy Faces</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="want_to_stay_anonymous">Want to stay anonymous?</string>
    <string name="homeless_identified">Homeless Identified</string>
    <string name="upload_the_image_of_the_homeless">Capture the homeless</string>
    <string name="attach">Capture</string>
    <string name="what_would_you_like_to_do">What would you like to do ?</string>
    <string name="pickup">Pickup</string>
    <string name="drop">Drop</string>
    <string name="enter_donation">Amount you would like to donate</string>
    <string name="amount_to_the_number">You can donate the amount to the number below in any of the medium</string>
    <string name="_91_7871821036">+91 - 7871821036</string>
    <string name="stay_anonymous">Stay anonymous</string>
    <string name="title">Title (Within 20 words)</string>
    <string name="idea">Idea (Within 100 words)</string>
    <string name="post_idea">Post idea</string>
    <string name="refresh">Refresh</string>
    <string name="your_location">Your location</string>
    <string name="edit_profile">Edit Profile</string>
</resources>
