<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/heart" />

            <TextView
                android:textAllCaps="true"
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/welcome"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/email_b"
                app:hasClearButton="true"
                app:labelText="@string/email_id">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/login_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/password_b"
                app:hasClearButton="true"
                app:labelText="@string/password">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="5dp">

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/show_pwd"
                    android:textColor="@color/textBlack"
                    android:textSize="15sp" />

<!--                <TextView-->
<!--                    android:id="@+id/forgot_password"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="end"-->
<!--                    android:padding="5dp"-->
<!--                    android:text="@string/forgot"-->
<!--                    android:textColor="@color/textBlack"-->
<!--                    android:textSize="15sp" />-->

            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:padding="3dp"
                android:text="@string/signin"
                android:textColor="@color/textWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button"
                android:padding="3dp"
                android:text="@string/newUser"
                android:textColor="@color/textWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="end"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/want_to_stay_anonymous"
                android:textColor="@color/textBlack"
                android:textSize="17sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/donate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:padding="3dp"
                    android:text="@string/donate"
                    android:textColor="@color/textWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/forum"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button"
                    android:padding="3dp"
                    android:text="@string/forum"
                    android:textColor="@color/textWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>