<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingStart="10dp"
        app:titleTextColor="@color/textWhite" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scrollbars="vertical"
        android:touchscreenBlocksFocus="false">

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/clipboard" />

            <TextView
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/details"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/name_b"
                app:hasClearButton="true"
                app:labelText="@string/name">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/id_b"
                app:hasClearButton="true"
                app:labelText="@string/address">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/email_b"
                app:hasClearButton="true"
                app:labelText="@string/email_id">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/emailID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/phonenumber"
                app:hasClearButton="true"
                app:labelText="@string/phno">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/name_b"
                app:hasClearButton="true"
                app:labelText="Profession">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/cal_b"
                app:hasClearButton="true"
                app:labelText="@string/dob">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/password_b"
                app:hasClearButton="true"
                app:labelText="@string/password">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/password_b"
                app:hasClearButton="true"
                app:labelText="@string/confirm_password">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_conf_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/home_b"
                app:hasClearButton="true"
                app:labelText="Organisation Name (If Org. In-charge)">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/org_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/location"
                app:hasClearButton="true"
                app:labelText="Organisation Address (If Org. In-charge)">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/org_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <TextView
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register_as_a"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/volCheckbox"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:text="@string/volunteer"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/userCheckbox"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:text="@string/user"
                android:textColor="@color/textBlack"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/orgCheckbox"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:text="@string/organisation_incharge"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:padding="3dp"
                android:text="@string/register"
                android:textColor="@color/textWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>