<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingStart="10dp"
        app:titleTextColor="@color/textWhite" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_toolbar"
        android:scrollbars="vertical"
        android:touchscreenBlocksFocus="false">

        <LinearLayout
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/details"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes201"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/name_b"
                app:enabled="false"
                app:labelText="@string/name">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/name_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes202"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/id_b"
                app:hasClearButton="true"
                app:labelText="@string/address">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/address_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes203"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/email_b"
                app:enabled="false"
                app:labelText="@string/email_id">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/emailID_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes204"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/phonenumber"
                app:hasClearButton="true"
                app:labelText="@string/phno">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/phoneNumber_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes205"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/name_b"
                app:hasClearButton="true"
                app:labelText="Profession">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/profession_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes206"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/cal_b"
                app:hasClearButton="true"
                app:labelText="@string/dob">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/dob_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes207"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/password_b"
                app:hasClearButton="true"
                app:labelText="@string/password">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_password_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes208"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/password_b"
                app:hasClearButton="true"
                app:labelText="@string/confirm_password">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/reg_conf_password_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes209"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/home_b"
                app:hasClearButton="true"
                app:labelText="Organisation Name (If Org. In-charge)">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/org_name_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes210"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/location"
                app:hasClearButton="true"
                app:labelText="Organisation Address (If Org. In-charge)">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/org_address_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/text_field_boxes211"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIcon="@drawable/location"
                app:hasClearButton="true"
                app:labelText="Organisation City (If Org. In-charge)">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/org_city_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="true" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <TextView
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register_as_a"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/volCheckbox_e"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:text="@string/volunteer"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/orgCheckbox_e"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:text="@string/organisation_incharge"
                android:textColor="@color/textBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/register_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:padding="3dp"
                android:text="@string/edit_profile"
                android:textColor="@color/textWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>